--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ in a related field preferred
     </section>
     <section class="application-form">
       <h2>Apply Now</h2>
-      <form class="row g-3" action="https://formsubmit.co/virtualmagics.jobs@gmail.com" method="post">
+      <form class="row g-3" action="https://formsubmit.co/"ee4bb3cfa58b039f0a99534c138561e7" method="post">
 
         <!-- Honeypot -->
         <input type="text" name="_honey" style="display: none;">
@@ -483,7 +483,7 @@ body {
 <!-- Pop-up chat window -->
 <div id="chat-window" style="display: none;">
   <h2>Chat with Us</h2>
-  <form action="https://formsubmit.co/ae493afac9ae1a8383b0b25e257f5753" method="post" id="chat-form" >
+  <form action="https://formsubmit.co/ee4bb3cfa58b039f0a99534c138561e7" method="post" id="chat-form" >
     <label for="full-name">Full Name:</label>
     <input type="text" id="full-name" name="full-name" required>
 
